--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -33,8 +33,8 @@ _Note: For the purpose of this example, I have added a space before each line so
 
 
 ### Bold and italic text
-To create emphasis in your markdown texts, use an asterisk before and after text *to italicize* or double asterisk **to make your text bold**.  
-Alternatively, you may use single underscore _for italics_ or double underscore __for bold__.
+To create emphasis in your markdown texts, use an asterisk `*` before and after text *to italicize* or double asterisk `**` **to make your text bold**.  
+Alternatively, you may use single underscore`_` _for italics_ or double underscore`__` __for bold__.
 
 ![text emphasis](tutorial_screenshots/italics_bold.png)
 
